Edit profile UI changes

--- a/Base.lproj/Localizable.strings
+++ b/Base.lproj/Localizable.strings
@@ -319,3 +319,4 @@
 "Cancel Subscription" =  "إلغاء الاشتراك";
 "Upgrade Plan" = "خطة الترقية";
 "Are you sure you want to cancel the Subscription?" = "هل أنت متأكد أنك تريد إلغاء الاشتراك؟";
+"Landline Number" = "رقم الهاتف الثابت";
