--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -316,3 +316,4 @@
 "Cancel Subscription" =  "Cancel Subscription";
 "Upgrade Plan" = "Upgrade Plan";
 "Are you sure you want to cancel the Subscription?" = "Are you sure you want to cancel the Subscription?";
+"Landline Number" = "Landline Number";
