--- a/ar.lproj/Localizable.strings
+++ b/ar.lproj/Localizable.strings
@@ -308,3 +308,4 @@
 "Cancel Subscription" =  "إلغاء الاشتراك";
 "Upgrade Plan" = "خطة الترقية";
 "Are you sure you want to cancel the Subscription?" = "هل أنت متأكد أنك تريد إلغاء الاشتراك؟";
+"Landline Number" = "رقم الهاتف الثابت";
