Working on unavailable booking functionality

--- a/Base.lproj/Localizable.strings
+++ b/Base.lproj/Localizable.strings
@@ -320,3 +320,5 @@
 "Upgrade Plan" = "خطة الترقية";
 "Are you sure you want to cancel the Subscription?" = "هل أنت متأكد أنك تريد إلغاء الاشتراك؟";
 "Landline Number" = "رقم الهاتف الثابت";
+"Book Slots" = "فتحات الكتاب";
+"Mark Unavailable" = "وضع علامة على أنه غير متوفر";
