--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -317,3 +317,5 @@
 "Upgrade Plan" = "Upgrade Plan";
 "Are you sure you want to cancel the Subscription?" = "Are you sure you want to cancel the Subscription?";
 "Landline Number" = "Landline Number";
+"Book Slots" = "Book Slots";
+"Mark Unavailable" = "Mark Unavailable";
