--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -325,3 +325,13 @@
 "Marked Available" = "Marked Available";
 "Edit Slots" = "Edit Slots";
 "Marked Unavailable" = "Marked Unavailable";
+"Add Doctor" = "Add Doctor";
+"Unavailable Slots" = "Unavailable Slots";
+"Are you sure you want to make it as un available?" = "Are you sure you want to make it as un available?";
+"Mark Slots" = "Mark Slots";
+"Your free Subscription will strat from today." = "Your free Subscription will strat from today.";
+"Start" = "Start";
+"Free Trial" = "Free Trial";
+"Month" = "Month";
+"You have already subscribed the plan. Do you want to cancel existing plan and updgrade with new one?" = "You have already subscribed the plan. Do you want to cancel existing plan and updgrade with new one?";
+"You have already availed the free plan. Please select paid plan to continue." = "You have already availed the free plan. Please select paid plan to continue.";
