fixed payment loader issue

--- a/Base.lproj/Localizable.strings
+++ b/Base.lproj/Localizable.strings
@@ -321,20 +321,22 @@
 "Are you sure you want to cancel the Subscription?" = "هل أنت متأكد أنك تريد إلغاء الاشتراك؟";
 "Landline Number" = "رقم الهاتف الثابت";
 "Book Slots" = "فتحات الكتاب";
-"Mark Unavailable" = "اجعله غير متاح";
+"Mark Offline" = "حجز الفترة";
 "Offline Booking" = "الحجز دون اتصال";
 "Its an offline booking done by you. You want to make it available again?" = "إنه حجز قمت به دون اتصال بالإنترنت. هل تريد إتاحته مرة أخرى؟";
 "Available" = "متاح";
 "Marked Available" = "تم وضع علامة متاح ";
-"Edit Slots" = "تحرير الفتحات";
-"Marked Unavailable" = "تم تعليمه بأنه غير متوفر";
+"Edit Slots" = "حرر اوقات العمل";
+"Offline booked" = "تم الحجز دون اتصال بنجاح";
 "Add Doctor" = "اضف طبيب";
-"Unavailable Slots" = "فتره الطبيب غير متاح";
-"Are you sure you want to make it as un available?" = "هل انت متاكد انك تريد جعله غير متاح؟";
-"Mark Slots" = "مارك فتحات";
+"Offline Booking" = "حجز دون اتصال";
+"Are you sure you want to make offline?" = "هل انت متاكد بانك ترغب في حجز دون اتصال";
+"Mark Slots" = "حدد الفترة";
 "Your free Subscription will strat from today." = "مدة التجربة ستبدأ من اليوم";
 "Start" = "بداية";
 "Free Trial" = "تجربة مجانية";
 "Month" = "شهر";
 "You have already subscribed the plan. Do you want to cancel existing plan and updgrade with new one?" =  "لقد اشتركت في الخطة بالفعل. هل تريد إلغاء الخطة الحالية وترقيتها بخطة جديدة؟";
 "You have already availed the free plan. Please select paid plan to continue." = "لقد اشتركت بالفعل في الخطة المجانية. يرجى تحديد الخطة المدفوعة للمتابعة؟";
+"Action" = "الاجراء";
+"Edit Doctor" = "حرر طبيب";
