--- a/Base.lproj/Localizable.strings
+++ b/Base.lproj/Localizable.strings
@@ -340,3 +340,5 @@
 "You have already availed the free plan. Please select paid plan to continue." = "لقد اشتركت بالفعل في الخطة المجانية. يرجى تحديد الخطة المدفوعة للمتابعة؟";
 "Action" = "الاجراء";
 "Edit Doctor" = "حرر طبيب";
+"We do not have detail of this appointment because its an offline booking done by you." = "ليس لدينا تفاصيل عن هذا الموعد لأنه حجز قمت به دون اتصال بالإنترنت.";
+"Landline Number must be of minimum 8 characters." = "يجب ألا يقل رقم الخط الأرضي عن 8 أحرف.";
